cocoa: use cocoa background color for constrained windows

These were using SK_ColorWHITE when they should have been using
[NSColor windowBackgroundColor].

BUG=743120

Change-Id: Icf5cff4c1e4451c55580921c0d661fd8381b19da
Reviewed-on: https://chromium-review.googlesource.com/575167
Reviewed-by: Jayson Adams <shrike@chromium.org>
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488748}