chrome/browser/ui/cocoa/chrome_style.h
@@ -19,7 +19,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace chrome_style {
 
 int GetCloseButtonSize();  // Size of close button.
-SkColor GetBackgroundColor();  // Dialog background color.
 SkColor GetLinkColor();  // Dialog link color.
 
 const int kTitleTopPadding = 15; // Padding above the title.
