chrome/browser/ui/cocoa/constrained_window/constrained_window_custom_window.mm
@@ -47,8 +47,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     base::CommandLine* command_line = base::CommandLine::ForCurrentProcess();
     if (!command_line->HasSwitch(switches::kTestType))
       [self setHasShadow:YES];
-    [self setBackgroundColor:skia::SkColorToCalibratedNSColor(
-        chrome_style::GetBackgroundColor())];
+    [self setBackgroundColor:[NSColor windowBackgroundColor]];
     [self setOpaque:NO];
     [self setReleasedWhenClosed:NO];
   }
